Identified wet solid interface through explicit coordinates, now pass arg

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -746,8 +746,14 @@ In Mesh:
  - The third solution, in case we cannot create groups of inner edges graphically,
     is to revert back to using if's on the coordinates...  
  
+ - Another way that is graphical consists in defining the Group of Volume Elements
+ whose Boundary you want to identify,
+ and then do ``Create boundary elements'' on that Group
+ 
+ 
  
 \section{QUADRILATERAL MESH of a CIRCLE/SEMISPHERE}
+
 
 Divided Disk or Divided Cylinder do exactly what you are looking for!!!
 
