Check the detection of 3d surface faces

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -601,6 +601,38 @@ To be added
 \part{Mesh Generation: Salome}
 
 
+\chapter{Features}
+
+
+ - {SUPPORT for DIFFERENT SHAPE ELEMENTS (quad, hex, tri, tet, ...)} 
+
+ - {SUPPORT for HYBRID MESHES (different elements on the same mesh)}
+    
+ - {SUPPORT for BIQUADRATIC ELEMENTS}
+    
+ - {SUPPORT for SCRIPTING}
+  
+ - Possibility to define Data or Initial/Boundary conditions on your Mesh 
+
+ - {An ACTIVE COMMUNITY of USERS}
+
+ - Potentially, Salome is also available to be \textit{compiled} on your computer
+ 
+ - Salome also contain its own version of Paraview
+
+\chapter{Installation issues}
+
+  The first time you run Salome after installation,
+  you may have it asking for opening service...
+
+The "Failed to narrow the root naming context" 
+is an error displayed when there is no entry in /etc/hosts 
+corresponding to your hostname. So, you need to add it
+
+YOU HAVE TO PUT WHAT COMES OUT OF ``hostname''!
+
+
+
  \chapter{SHAPER Module}
 
 
