Modified 3d mesh to be aligned with 0.25-0.75

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -620,9 +620,12 @@ Pay attention to the difference between Common and Intersection
 
  \chapter{MESH Module}
 
-\section{Basic procedure}
+ 
+ \section{Use the NoteBook tab to define variables and parametrize your operations!}
 
- Use the NoteBook tab to define variables and parametrize your operations!
+ 
+ \section{Basic procedure}
+
 
 \subsection{Geometry}
 
