Minor doc change

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -1140,9 +1140,11 @@ cosi' vedi le chiamate all'interno della libreria petsc.
   We have a configuration file \verb|DoxyfileFemuslib.in|
   that is used by Cmake to generate \verb|DoxyfileFemuslib|
   
+  This last file is going to be the input to \verb|doxygen|
   
+  However, we don't need to know exactly where these files are.
   
-  Go in the build directory and type ``make Docs''
+  We just need to go in the build directory and type ``make Docs''
   
   For each member datum or member function, 
    Doxygen takes the comments 
