--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -379,7 +379,25 @@ To overcome this, do
   
   \chapter{Solution (Quantities, Equations, Operators)}
 
-
+  \section{Solution}
+  
+  Every Solution object contains ALL variables
+  
+  It should actually be called a MultiVariableSolution (multiple in variables, not in levels)
+  
+  
+  Every Solution object has multiple Numeric Vectors 
+  
+  Sol 
+  
+  SolOld
+  
+  Eps
+  
+  Res
+  
+  
+  
   \section{MultilevelSolution}
    
    Only MultilevelSolution has a Writer object. This writer will write from the FINEST level available.
