Thinking of how to export node mapping conversion

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -38,9 +38,28 @@
  
  \chapter{Postprocessing: Paraview}
 
+ 
+ \chapter{Libraries involved}
+ 
+ 
+ \section{Externally installed}
+ 
+ \subsection{Petsc}
 
+ \subsection{Slepc}
 
-
+ \subsection{MPI}
+ 
+ \subsection{HDF5}
+ 
+ \section{Internally shipped}
+ 
+ \subsection{Adept}
+ 
+ \subsection{b64}
+ 
+ \subsection{json}
+ 
 
 \part{Compiling environment: CMake}
 
