Various VTK functions

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -1071,7 +1071,10 @@ FEMuS includes,
 
  - data encapsulation, please
  
- 
+ - it is good to create small functions: you isolate tasks, 
+   you define interfaces so you can highlight what is ``const'' and what is not,
+   you can avoid code duplication, etc.
+   
  
 \chapter{Git}
 
