Initialized wg app

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -98,7 +98,12 @@
 
 \part{Application}
 
+ \section{How to add source files to the library}
+ 
+- NOW PAY ATTENTION TO WHAT HAPPENS WHEN YOU ADD SOURCE FILES to the LIBRARY (not to the application)! You have to 
+update the LIST in the src/ cmake file!!! (use ls -1)
 
+- now go to the binary directory and type make to generate the library
 
  \section{How to SETUP a NEW APPLICATION of the LIBRARY (will do a script probably)}
 
@@ -110,12 +115,8 @@
 
 - open cmake-gui and run configure and generate
 
-- NOW PAY ATTENTION TO WHAT HAPPENS WHEN YOU ADD SOURCE FILES to the LIBRARY (not to the application)! You have to 
-update the LIST in the src/ cmake file!!! (use ls -1)
 
-- now go to the binary directory and type make to generate the library
-
-- then enter your application folder and run make to generate your executable
+- now go to your application folder and run make to generate your executable
 
  \section{How to IMPLEMENT A NEW APPLICATION}
 
