Minor doc changes

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -677,11 +677,16 @@ you pick for the quadrature the ones that guarantees exactness for the highest-d
 
 The "Failed to narrow the root naming context" 
 is an error displayed when there is no entry in /etc/hosts 
-corresponding to your hostname. So, you need to add it
+corresponding to your hostname. So, you need to add the output of the command
+ ``hostname'' to that file!
 
-YOU HAVE TO PUT WHAT COMES OUT OF ``hostname''!
+\chapter{How to save your work}
 
+  \section{Save study}
 
+  \section{Dump Python script}
+  
+  
 
  \chapter{SHAPER Module}
 
