--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -1269,6 +1269,8 @@ To be added
 
  mpiexec -n 2 kdbg myapp
  
+ Then you have to click on Run in all windows
+ 
  \subsubsection{Segfaults}
 
 If you use -info it tells you a lot of things about PETSC calls.
