Cleaned most lifting_external mesh files

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -689,7 +689,7 @@ corresponding to your hostname. So, you need to add the output of the command
    
  \chapter{How to parametrize your operations}
 
-    Use the NoteBook tab to define variables 
+    Use the NoteBook tab to define variables. You can then use them both in the Geometry and in the Mesh modules.
 
  \chapter{Modules}
 
