--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -740,8 +740,9 @@ Pay attention to the difference between Common and Intersection
  \section{MESH}
 
 
+ \chapter{Procedure - 2D, Triangles}
  
- \chapter{Procedure - 2D, Mapping}
+ \chapter{Procedure - 2D, Quadrangles: Mapping}
 
 
 \section{Geometry}
@@ -791,10 +792,126 @@ In Mesh:
      --> Rename it to "Mesh" + something!!!
      
  
-- AAA: I think I found how to do the "quadrangle-mapping" mesh of a face where one side has multiple edges coming from Explode!!! 
+- AAA: I found how to do the "quadrangle-mapping" mesh of a face where one side has multiple edges coming from Explode!!! 
   I just do the same, but I specify "Composite wire discretization" instead of "Wire discretization"!!!
     
-\subsection{Groups of Mesh elements}
+ 
+ 
+\section{QUADRILATERAL MESH of CIRCLES/CYLINDERS/SPHERES}
+
+\section{Divided Disk}
+
+Divided Disk or Divided Cylinder do exactly what you are looking for!!!
+
+Partition a semisphere using a Divided Disk!
+
+Beware: it is essential that a vertex of the inner square is aligned with the "meridian arc" that is intrinsic in the generation of a Sphere surface!
+
+\section{From scratch}
+
+For a circle, just do a square in the middle, then divide the circumference into 4 parts,
+join the angles of the squares with the vertices of these parts and you are done.
+
+For the semisphere, if you try the same it doesn't work, because the faces that are constructed
+do not belong to the original semisphere...
+
+So the idea seems to be NOT the following:
+ - make curved edges on the semisphere
+ - use them to create curved faces
+  So, try to avoid starting from the Edges and instead keep yourself at the level of Faces.
+  Then only at the end you will Explode to get the Edges (that you may need later for submeshes)
+  
+  Also, try not to cut too much, because if you do so you may have multiple edges on one side and then it is not so easy to mesh...
+ 
+ The other way to go is to directly create subfaces by Partition of the semisphere!
+ 
+ First you split, then you join...
+ 
+ Now:
+ 
+ - Fuse doesn't work with non-planar faces...
+ - Glue Edges is to put together coincident edges, but not to remove them
+ - It seems like the right option is Sewing, then Union faces, then Explode to get the edges for the submeshes
+ - The only problem is that now one face does not have 4 edges, but one side can be made of multiple edges,
+   and that creates problems in the mapping algorithm. So, it's all about making 1 edge
+   
+
+\chapter{Procedure - 3D - Hexahedra}
+
+\section{When you do a 3d mesh, not only will you have Volumes and Faces, but also the Edges of the ``Bounding Box''}
+
+  You can leave the edges where they are, because in 3d only Volumes and Faces will be read from the code
+ 
+
+ \section{If I want to create a mesh of a Box with 3 arbitrary mesh discretizations in the 3 directions,
+  what is the best way to do that?}
+  
+
+I cannot create a Submesh of a Submesh
+
+- Geometry
+  Create Volumes
+    ---> Extract Faces from a Volume
+    ---> Extract Edges from 2 faces in order to do Submesh of 3 edges in the x,y,z directions
+- Mesh 
+  I'd say I'll treat a Face like I do in 2D, and then do a Mapping to opposite Faces...
+  You don't want to do Automatic Hexahedralization or Tetrahedralization...
+  
+- Another method could perhaps be to create 1d meshes and Propagate their Hypothesis on opposite edges!
+  Global Algorithms:
+    3d: Hexahedron (i,j,k)
+    2d: Quadrangle mapping
+    1d: Wire discretization  - Here sometimes it gives trouble if you don't specify any "Number of Segments"...
+    
+    Do 3 submeshes on 3 Edges, and on each of them establish a "Propagate hypothesis on opposite edges"
+    
+
+    
+\subsection{MESH EXTRUSION}
+
+
+- If your mesh can be thought of as an Extrusion of a 2D mesh, one way to do this 
+  is simply to do your 2D mesh and then extrude it
+  
+- Do extrusion only of faces to avoid generation of extra edges    
+
+- "Scale factors" refer to the TRANSVERSAL direction, not the orthogonal one
+
+
+
+\section{HOW TO SHARE SUBMESHES ON CONTIGUOUS FACES}
+
+
+When you explode adjacent faces, the edges are called differently... we should identify them
+
+
+ \section{Change the Geometry in the Mesh with ``Move node''}
+
+
+ There is a command called "Move node", perhaps it helps avoiding to remesh everything if I go back and change the Geometry instead...
+
+ - 
+ 
+
+\section{Translate Mesh}
+
+ 
+ Copy Mesh of course does not do the trick, you need ``Translation''
+ 
+ ``Offset'' of a mesh does not work for Quadratic mesh
+ 
+ ``Translation'' of a mesh works with ``Create a new mesh'' and ``Copy groups'' creates a translated copy
+
+ 
+\section{Stretch elements}
+
+  ``Scale transform'' does the trick
+
+  \chapter{Procedure - 3D - Tetrahedra}
+
+  \chapter{Procedure - 3D - Wedges}
+   
+ \chapter{Groups of Mesh elements}
  
   must be named \verb|Group_X_Y|, where X is the flag given to the object and Y is the type of boundary condition (0 = Dirichlet, 1 = Neumann).
   
@@ -866,136 +983,41 @@ In Mesh:
  and then do ``Create boundary elements'' on that Group
  
  
- 
-\section{QUADRILATERAL MESH of CIRCLES/CYLINDERS/SPHERES}
+ \subsection{Do ``Group on Geometry'' or ``Group on Filter'' instead of ``Standalone group'',
+          whenever possible}
+          
+           
+  \subsection{If you do Compound, do the ``Groups on Geometry'' before doing Compound, i.e., on the partial meshes}         
+          
+  In fact a Compound does not have an associated Geometry to it
+        
+          
+\section{Groups: BOUNDARY CONDITIONS}
 
-\section{Divided Disk}
 
-Divided Disk or Divided Cylinder do exactly what you are looking for!!!
-
-Partition a semisphere using a Divided Disk!
-
-Beware: it is essential that a vertex of the inner square is aligned with the "meridian arc" that is intrinsic in the generation of a Sphere surface!
-
-\section{From scratch}
-
-For a circle, just do a square in the middle, then divide the circumference into 4 parts,
-join the angles of the squares with the vertices of these parts and you are done.
-
-For the semisphere, if you try the same it doesn't work, because the faces that are constructed
-do not belong to the original semisphere...
-
-So the idea seems to be NOT the following:
- - make curved edges on the semisphere
- - use them to create curved faces
-  So, try to avoid starting from the Edges and instead keep yourself at the level of Faces.
-  Then only at the end you will Explode to get the Edges (that you may need later for submeshes)
-  
-  Also, try not to cut too much, because if you do so you may have multiple edges on one side and then it is not so easy to mesh...
- 
- The other way to go is to directly create subfaces by Partition of the semisphere!
- 
- First you split, then you join...
- 
- Now:
- 
- - Fuse doesn't work with non-planar faces...
- - Glue Edges is to put together coincident edges, but not to remove them
- - It seems like the right option is Sewing, then Union faces, then Explode to get the edges for the submeshes
- - The only problem is that now one face does not have 4 edges, but one side can be made of multiple edges,
-   and that creates problems in the mapping algorithm. So, it's all about making 1 edge
    
-
-\chapter{Procedure - 3D}
-
-\section{When you do a 3d mesh, not only will you have Volumes and Faces, but also the Edges of the ``Bounding Box''}
-
-  You can leave the edges where they are, because in 3d only Volumes and Faces will be read from the code
- 
-
- \section{If I want to create a mesh of a Box with 3 arbitrary mesh discretizations in the 3 directions,
-  what is the best way to do that?}
   
-
-I cannot create a Submesh of a Submesh
-
-- Geometry
-  Create Volumes
-    ---> Extract Faces from a Volume
-    ---> Extract Edges from 2 faces in order to do Submesh of 3 edges in the x,y,z directions
-- Mesh 
-  I'd say I'll treat a Face like I do in 2D, and then do a Mapping to opposite Faces...
-  You don't want to do Automatic Hexahedralization or Tetrahedralization...
+ \section{Groups: OTHER PROPERTIES}
+ 
+ 
   
-- Another method could perhaps be to create 1d meshes and Propagate their Hypothesis on opposite edges!
-  Global Algorithms:
-    3d: Hexahedron (i,j,k)
-    2d: Quadrangle mapping
-    1d: Wire discretization  - Here sometimes it gives trouble if you don't specify any "Number of Segments"...
-    
-    Do 3 submeshes on 3 Edges, and on each of them establish a "Propagate hypothesis on opposite edges"
-    
-
-    
-\subsection{MESH EXTRUSION}
-
-
-- If your mesh can be thought of as an Extrusion of a 2D mesh, one way to do this 
-  is simply to do your 2D mesh and then extrude it
-  
-- Do extrusion only of faces to avoid generation of extra edges    
-
-- "Scale factors" refer to the TRANSVERSAL direction, not the orthogonal one
-
-
-
-\section{HOW TO SHARE SUBMESHES ON CONTIGUOUS FACES}
-
-
-When you explode adjacent faces, the edges are called differently... we should identify them
-
-
- \section{Change the Geometry in the Mesh with ``Move node''}
-
-
- There is a command called "Move node", perhaps it helps avoiding to remesh everything if I go back and change the Geometry instead...
-
- - 
+ \chapter{Mesh controls}
  
-
-\section{Translate Mesh}
-
- 
- Copy Mesh of course does not do the trick, you need ``Translation''
- 
- ``Offset'' of a mesh does not work for Quadratic mesh
- 
- ``Translation'' of a mesh works with ``Create a new mesh'' and ``Copy groups'' creates a translated copy
-
- 
-\section{Stretch elements}
-
-  ``Scale transform'' does the trick
-
-  
-   
- \section{BOUNDARY CONDITIONS}
-
-
- I think it's best if I do the groups on the initial meshes (before doing the Compound)
-  because there I can do "Group on geometry",
-while a Compound does not have an associated Geometry to it
- (alternatively, one could do Group on Filter maybe)
-
- \section{Mesh controls}
- 
-  You want to check that there are 
+ Before exporting the mesh file, you want to check that there are 
   
   - no Free Nodes or Orphan Nodes (nodes that don't belong to any element)
   
   - no Double Nodes
   
   - no Inner Edges (only Free Borders, i.e., edges that are at the boundary of the domain)
+  
+  
+ \chapter{Export MED file}
+ 
+  Make sure you remove the check ``Automatically detect space dimension''.
+  
+  That's because we always read all 3D coordinates.
+  That can handle cases like 2d manifold in 3d space
   
   
 
