Mesh lift_ext to be completed with BC

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -910,8 +910,12 @@ When you explode adjacent faces, the edges are called differently... we should i
   \chapter{Procedure - 3D - Tetrahedra}
 
   \chapter{Procedure - 3D - Wedges}
-   
- \chapter{Groups of Mesh elements}
+  
+  
+  \chapter{Convert to biquadratic (for quad/hex) or to quadratic (for tri/tet)}
+  
+  
+  \chapter{Groups of Mesh elements}
  
   must be named \verb|Group_X_Y|, where X is the flag given to the object and Y is the type of boundary condition (0 = Dirichlet, 1 = Neumann).
   
