Need to remove internal edges and intersecting groups

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -1029,6 +1029,7 @@ When you explode adjacent faces, the edges are called differently... we should i
 
  \chapter{Questions}
 
+- What is the difference between SubMeshes and Groups? Are Submeshes exported in the MED file?
 
 - When I remove a Group, can I ask to remove also the elements of that group from the Mesh???
 
