--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -50,6 +50,9 @@
  
  \subsection{Petsc}
 
+ \subsubsection{Metis/Parmetis}
+ 
+ 
  \subsection{Slepc}
 
  \subsection{HDF5}
@@ -95,17 +98,25 @@
 \chapter{ccmake vs. cmake-gui}
 
 
+\part{Library}
 
-\part{Application}
 
- \section{How to add source files to the library}
+ \chapter{How to add source files to the library}
  
 - NOW PAY ATTENTION TO WHAT HAPPENS WHEN YOU ADD SOURCE FILES to the LIBRARY (not to the application)! You have to 
 update the LIST in the src/ cmake file!!! (use ls -1)
 
 - now go to the binary directory and type make to generate the library
 
- \section{How to SETUP a NEW APPLICATION of the LIBRARY (will do a script probably)}
+
+
+\part{Application}
+
+
+ \chapter{Setup}
+  
+  
+\section{How to SETUP a NEW APPLICATION (will do a script probably)}
 
 - Create a folder in the Applications directory with your main function and your src/header files
 
@@ -118,15 +129,11 @@ update the LIST in the src/ cmake file!!! (use ls -1)
 
 - now go to your application folder and run make to generate your executable
 
- \section{How to IMPLEMENT A NEW APPLICATION}
+  \chapter{Implementation}
 
 - Follow the examples
 
-\section{How to change the mesh file of an application}
-
-- Put the mesh file in the input/ directory
-
-- Set the filename in the main file
+ \chapter{Run}
 
  \section{How to run in parallel with threads instead of cores}
 
@@ -142,7 +149,14 @@ To overcome this, do
 
 - Script
 
- \section{When you change the input file in the repo folder (NOT IN THE BINARY FOLDER) then you have to RERUN CMAKE !!!}
+ \section{How to change the mesh file of an application}
+
+- Put the mesh file in the input/ directory
+
+- Set the filename in the main file
+
+\section{When you change the input file in the repo folder (NOT IN THE BINARY FOLDER) then you have to RERUN CMAKE !!!}
+ 
  
 
  \section{How to RESTART a run of an application}
@@ -170,7 +184,7 @@ To overcome this, do
 
 
 
-\part{Application: main stages}
+\part{Application: Implementation, main stages}
 
   
    \chapter{Main blocks}
@@ -670,40 +684,11 @@ you pick for the quadrature the ones that guarantees exactness for the highest-d
  
  - Salome also contain its own version of Paraview
 
-\chapter{Installation issues}
+ 
+ 
+ \section{Modules}
 
-  The first time you run Salome after installation,
-  you may have it asking for opening service...
-
-The "Failed to narrow the root naming context" 
-is an error displayed when there is no entry in /etc/hosts 
-corresponding to your hostname. So, you need to add the output of the command
- ``hostname'' to that file!
-
-\chapter{How to save/open your work}
-
-  \section{Study HDF file}
-
-  
-  \section{Python script}
-
-  
-    \subsection{When you REMOVE things, such as Mesh Elements, or Groups, the script may complain at loading. Then it is not hard to fix it}
-    
-    
-    You go in the script and you see where it says ``some objects were removed''.
-    Remove them manually.
-  
-  
-  
-   
- \chapter{How to parametrize your operations}
-
-    Use the NoteBook tab to define variables. You can then use them both in the Geometry and in the Mesh modules.
-
- \chapter{Modules}
-
- \section{SHAPER}
+ \subsection{SHAPER}
 
 
 This is a new module that in the long run is supposed to replace the role of the GEOM module.
@@ -730,16 +715,65 @@ Ok, it seems like:
 
  - Pay attention sometimes when you Dump study, it seems like you may lose the Shaper part!!!  
    
- \section{GEOMETRY}
+ \subsection{GEOMETRY}
  
- \subsection{ROTATIONS}
+
+ \subsection{MESH}
+
+ 
+\chapter{Installation issues}
+
+  The first time you run Salome after installation,
+  you may have it asking for opening service...
+
+The "Failed to narrow the root naming context" 
+is an error displayed when there is no entry in /etc/hosts 
+corresponding to your hostname. So, you need to add the output of the command
+ ``hostname'' to that file!
+
+\chapter{How to save/open your work}
+
+  \section{Study HDF file}
+
+  
+  \section{Python script}
+
+  
+    \subsection{When you REMOVE things, such as Mesh Elements, or Groups, the script may complain at loading. Then it is not hard to fix it}
+    
+    
+    You go in the script and you see where it says ``some objects were removed''.
+    Remove them manually.
+  
+  
+  
+  
+ \chapter{Procedure: Geometry and Mesh}
+
+   \section{General ideas}
+   
+   
+ \subsection{Parametrize your operations}
+
+    Use the NoteBook tab to define variables. You can then use them both in the Geometry and in the Mesh modules.
+
+ \subsection{Synergy between Geometry and Mesh}
+ 
+ 
+ \subsubsection{Do your Geometry in a way that you have Geometrical Objects for the upcoming Groups in the Mesh}
+ 
+  In that way, you will be able to construct ``Groups on Geometry'', which is flexible when you change your parameters in the Notebook
+ 
+ \subsubsection{Where to do certain operations}
+ 
+  \paragraph{ROTATIONS in Geometry or Mesh?}
 
 
 If you have to rotate, do not do that in the Geometry, because then the Mesh will not follow.
 
 If you do it in the Mesh, the Geometry does not follow either.
 
-\subsection{SPLIT EDGES/FACES - Partition, Explode}
+\subsubsection{SPLIT EDGES/FACES - Partition, Explode}
 
 
 The tool for this is: Partition then Explode. At first it seems like with Partition no split happens, but then if you do Explode you will get all the pieces
@@ -748,17 +782,14 @@ It seems like Cut is not the right tool for splitting
 Pay attention to the difference between Common and Intersection
 
 
-\subsubsection{When you mesh a Partition object, the Mesh module automatically generates Groups of Faces... Later you may use them, they are automatically Groups on Geometry!}
+\paragraph{When you mesh a Partition object, the Mesh module automatically generates Groups of Faces... Later you may use them, they are automatically Groups on Geometry!}
 
-
- \section{MESH}
  
+ \section{1D, Edges}
 
- \chapter{Procedure - 1D, Edges}
-
- \chapter{Procedure - 2D, Triangles}
+ \section{2D, Triangles}
  
- \chapter{Procedure - 2D, Quadrangles: Mapping}
+ \section{2D, Quadrangles}
 
 
 \subsection{Geometry}
@@ -850,7 +881,7 @@ So the idea seems to be NOT the following:
    and that creates problems in the mapping algorithm. So, it's all about making 1 edge
    
 
-\chapter{Procedure - 3D - Hexahedra}
+\section{3D - Hexahedra}
 
 \subsection{When you do a 3d mesh, not only will you have Volumes and Faces, but also the Edges of the ``Bounding Box''}
 
@@ -921,28 +952,20 @@ When you explode adjacent faces, the edges are called differently... we should i
 
   ``Scale transform'' does the trick
 
-  \chapter{Procedure - 3D - Tetrahedra}
+  \section{3D - Tetrahedra}
+  
+   \subsection{Algorithms}
 
-  \chapter{Procedure - 3D - Wedges}
+  \section{3D - Wedges}
   
   
-  \chapter{Convert to biquadratic (for quad/hex) or to quadratic (for tri/tet)}
+  \chapter{Procedure: Convert to biquadratic (for quad/hex) or to quadratic (for tri/tet)}
+  
+  This is because we need those nodes to construct quadratic/biquadratic dofs
   
   
-  \chapter{Groups of Mesh elements}
+  \chapter{Procedure: Do Groups of Mesh elements}
  
-  must be named \verb|Group_X_Y|, where X is the flag given to the object and Y is the type of boundary condition (0 = Dirichlet, 1 = Neumann).
-  
-  
-  What about the groups that are not for boundary conditions? In that case, first is ``flag'', second is ``type'', where ``type'' will have
-  a different meaning
-
-  In order to enforce Boundary Conditions, Material Properties, and potentially other things too,
-  we have to define Groups of Edges, or Faces, or Volumes (also Groups of Nodes for the extremes of a 1d domain)
-  
-  The flexible way to define these groups is NOT by selecting the IDs but by doing either "Group on geometry" or "Group on filter"
-
-- You can use Filters to define Groups of Mesh Elements
 
 \subsubsection{Can I define more than one Group on the same element?}
 
@@ -1004,29 +1027,51 @@ When you explode adjacent faces, the edges are called differently... we should i
  \subsection{Do ``Group on Geometry'' or ``Group on Filter'' instead of ``Standalone group'',
           whenever possible}
           
-           
+    The flexible way to define these groups is NOT by selecting the IDs but by doing either "Group on geometry" or "Group on filter"
+
+- You can use Filters to define Groups of Mesh Elements
+
+        
   \subsection{If you do Compound, do the ``Groups on Geometry'' before doing Compound, i.e., on the partial meshes}         
           
   In fact a Compound does not have an associated Geometry to it
         
           
-\section{Groups: BOUNDARY CONDITIONS}
+\section{Requirements for Groups: ALL}
 
-\subsection{Requirement: give one and only one group for each boundary element}
+
+\subsection{Name}
+
+  must be named \verb|Group_X_Y|, where X is the flag given to the object and Y is the type of boundary condition (0 = Dirichlet, 1 = Neumann).
+  
+  
+  What about the groups that are not for boundary conditions? In that case, first is ``flag'', second is ``type'', where ``type'' will have
+  a different meaning
+
+  In order to enforce Boundary Conditions, Material Properties, and potentially other things too,
+  we have to define Groups of Edges, or Faces, or Volumes (also Groups of Nodes for the extremes of a 1d domain)
+  
+
+
+\subsection{Give one and only one group for each element}
+
+ That's because we have not implemented reading when multiple groups are defined on the same element
+
+\section{Requirements for Groups: BOUNDARY CONDITIONS}
+
    
-\subsection{Requirement: Remove inner boundary elements}
+\subsection{Remove inner boundary elements}
 
   
- \section{Groups: OTHER PROPERTIES}
+ \section{Requirements for Groups: OTHER PROPERTIES}
  
  You can specify geometrical regions
  
-\subsection{Requirement: give one and only one group for each element}
  
   
- \chapter{Mesh controls}
+ \chapter{Procedure: Run some Mesh controls}
  
- Before exporting the mesh file, you want to check that there are 
+ Before exporting the mesh file, it would be wise to check that there are 
   
   - no Free Nodes or Orphan Nodes (nodes that don't belong to any element)
   
@@ -1035,12 +1080,12 @@ When you explode adjacent faces, the edges are called differently... we should i
   - no Inner Edges (only Free Borders, i.e., edges that are at the boundary of the domain)
   
   
- \chapter{Export MED file}
+ \chapter{Procedure: Export MED file}
  
   Make sure you remove the check ``Automatically detect space dimension''.
   
   That's because we always read all 3D coordinates.
-  That can handle cases like 2d manifold in 3d space
+  That can handle cases like 2d manifold in 3d space.
   
   
 
@@ -1080,7 +1125,7 @@ On the other hand, if instead of dumping the script I save the study it is NOT c
     That group should appear as a "child" of the Geometry object you will then mesh. I can try this to double check.
 
 
-\part{Mesh Visualization: Paraview}
+\part{Visualization: Paraview}
 
 
 \chapter{Selections}
